--- a/css/styles.css
+++ b/css/styles.css
@@ -8,20 +8,20 @@ body{
 h1{
     margin-top: 0;
     font-family: 'Sacramento', cursive;
-    font-size: 45px;
+    font-size: 2.625em;
 }
 h2{
     margin-top: 0;
     margin-bottom: 0;
-    font-size: 27px;
+    font-size: 2em;
 }
 h3{
     margin-top: 0;
-    font-size: 22px;
+    font-size: 1.8em;
 }
 p{
     margin-top: 0;
-    font-size: 17px;
+    font-size: 1.1em;
     color: #003638;
 }
 hr{
@@ -34,16 +34,16 @@ hr{
     margin-bottom: 30px;
 }
 .top-container{
-    background-color: #E4F9F5;
+    background-color: #30E3CA ;
     position: relative;
     padding-top: 200px;  
 }
 
 .middle-container{
-    background-color: #30E3CA;
+    background-color: #E4F9F5;
 }
 .bottom-container{
-    background-color: #30E3CA;
+    background-color: #E4F9F5;
 }
 .top-cloud{
     position: absolute;
@@ -55,23 +55,23 @@ hr{
     left: 30%;
     bottom: 45%;
 }
-a:link {
+a:link{
     text-decoration: none;
-  }
+}
   
-  a:visited {
+a:visited{
     text-decoration: none;
-  }
+}
   
-  a:hover {
+a:hover{
     text-decoration: underline;
-  }
+}
   
-  a:active {
+a:active{
     text-decoration: underline;
-  }
-  a {
-    color:#F4EEE8 ;
+}
+a{
+    color: #40514E;
     font-size: 20px;
-  }
+}
   
