--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,11 @@ body{
     color: #40514E;
 }
 h1{
-    margin-top: 0;
+    margin-top: 40px;
     font-family: 'Sacramento', cursive;
     font-size: 2.625em;
+    margin-bottom: 10px;
+
 }
 h2{
     margin-top: 0;
